--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./styles.css" rel="stylesheet">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odn Recipes</h1>
-        <a href="recipes/bruger.html">Burger</a>
+        <h1>Odin Recipes</h1>
+        <div class="recipes">
+        <a href="./recipes/burger.html">Burger</a>
+        <a href="./recipes/pizza.html">Pizza</a>
+        </div>
     </body>
 </html>
