--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,30 +3,35 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./style.css" rel="stylesheet">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Burger</h1>
-        <img width="600px" height="400px" src="https://www.seriouseats.com/thmb/uSNXjlR9pQU0Nt9HJTzD2ZhZ45Y=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__images__2015__07__20150728-homemade-whopper-food-lab-35-b3500a5c2f3e4e10aa3169d5f76e1468.jpg" alt="burger">
-        <h3>Make a perfectly juicy burger like this at home!</h3>
-        <p>Need a basic burger recipe that you can whip up in no time? We have the perfect one. With just 5 ingredients and 15 minutes of cooking time, this flavorful recipe is ready to be shared, topped, and sauced in any way you like! Learn how to make your own sizzling beef burger patties right here.</p>
+        <div class="tomato">
+         <h1>Burger</h1>
+         <img class="center" src="https://www.seriouseats.com/thmb/uSNXjlR9pQU0Nt9HJTzD2ZhZ45Y=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__images__2015__07__20150728-homemade-whopper-food-lab-35-b3500a5c2f3e4e10aa3169d5f76e1468.jpg" alt="a burger">
+         <h3>Make a perfectly juicy burger like this at home!</h3>
+         <p>Need a basic burger recipe that you can whip up in no time? We have the perfect one. With just 5 ingredients and 15 minutes of cooking time, this flavorful recipe is ready to be shared, topped, and sauced in any way you like! Learn how to make your own sizzling beef burger patties right here.</p>
+      
+         <div class="burger">
+          <h4>Ingredients</h4>
+          <ul>
+              <li>2 large egg</li>
+              <li>1 teaspoon salt</li>
+              <li>1 teaspoon ground black pepper</li>
+              <li>2 pounds ground beef</li>
+              <li>1 cup fine dry bread crumbs</li>
+          </ul>
 
-        <h4>Ingredients</h4>
-        <ul>
-            <li>2 large egg</li>
-            <li>1 teaspoon salt</li>
-            <li>1 teaspoon ground black pepper</li>
-            <li>2 pounds ground beef</li>
-            <li>1 cup fine dry bread crumbs</li>
-        </ul>
-
-        <h4>Steps</h4>
-        <ol>
-            <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
-            <li>Whisk egg, salt, and pepper together in a medium bowl.</li>
-            <li>Add ground beef and bread crumbs; mix with your hands or a fork until well blended.</li>
-            <li>Form into four 3/4-inch-thick patties.</li>
-            <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
-        </ol>
+          <h4>Steps</h4>
+          <ol>
+              <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+              <li>Whisk egg, salt, and pepper together in a medium bowl.</li>
+              <li>Add ground beef and bread crumbs; mix with your hands or a fork until well blended.</li>
+              <li>Form into four 3/4-inch-thick patties.</li>
+              <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+          </ol>
+         </div>
+        </div>
     </body>
 </html>
