--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <div class="recipes">
-        <a href="./recipes/burger.html">Burger</a>
-        <a href="./recipes/pizza.html">Pizza</a>        
-        </div>
+       <div class="spices">
+         <h1>Odin Recipes</h1>
+         <div class="recipes">
+          <a href="./recipes/burger.html">Burger</a>
+          <a href="./recipes/pizza.html">Pizza</a>
+          <a href="./recipes/fried chicken.html">Fried Chicken</a>        
+         </div>
+       </div>  
     </body>
 </html>
