--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
        <div class="spices">
          <h1>Odin Recipes</h1>
          <div class="recipes">
-          <a href="./recipes/burger.html">Burger</a>
-          <a href="./recipes/pizza.html">Pizza</a>
-          <a href="./recipes/fried chicken.html">Fried Chicken</a>        
-         </div>
+           <div class="container_1">
+            <a class="one" href="./recipes/burger.html">Burger</a>
+           </div>
+           <div class="container_2">
+            <a class="two" href="./recipes/pizza.html">Pizza</a>
+           </div>
+           <div class="container_3">
+            <a class="not" href="./recipes/fried chicken.html">Fried Chicken</a> 
+           </div> 
+         </div>      
        </div>  
     </body>
 </html>
